--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,95 +1,154 @@
-<br>
 <div class="container">
-    <div class="row">
-        <div class="col-md-12 col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-12 lead" style="font-weight:bold">User profile
-                            <hr>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-lg-6 text-center">
-                            <img class="rounded-circle img-fluid img-responsive" style="display:block; margin:auto;width:200px;height:200px" src="../../assets/images/{{imagePath}}">
-                        </div>
-                        <div class="col-md-6 col-lg-6">
-                            <div class="row">
-                                <div class="col-md-6 col-lg-6">
-                                    <h2 class="only-bottom-margin" style="font-weight:bold">{{firstname}}&nbsp;{{lastname}}</h2>
-                                </div>
-                            </div>
-                            <div class="row" style="margin:0 auto">
-                                <div class="col-md-6">
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                <span class="text-muted">Email:</span>
-                                            </td>
-                                            <td>{{email}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <span class="text-muted">Mobile:</span>
-                                            </td>
-                                            <td>{{phone}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <span class="text-muted">DOB:</span>
-                                            </td>
-                                            <td>{{dob.year}}/{{dob.month}}/{{dob.day}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <span class="text-muted">Gender:</span>
-                                            </td>
-                                            <td> {{gender}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <span class="text-muted">Country:</span>
-                                            </td>
-                                            <td>{{country}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <span class="text-muted">State:</span>
-                                            </td>
-                                            <td>{{state}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <span class="text-muted">City:</span>
-                                            </td>
-                                            <td>{{city}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <span class="text-muted">Address:</span>
-                                            </td>
-                                            <td> {{address_1}},{{address_2}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <span class="text-muted">Code:</span>
-                                            </td>
-                                            <td> {{code}}</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <hr>
-                            <button class="btn btn-primary pull-right">
-                                <i class="fa fa-pencil"></i> Edit</button>
-                        </div>
-                    </div>
-                </div>
+    <h2>Profile</h2>
+    <div class="card card-block" style="width:100%;margin:0 auto">
+        <img class="card-img-top rounded-circle img-fluid img-responsive" src="../../assets/images/{{imagePath}}" alt="Card image"
+            style="width:250px;margin:0 auto">
+        <div class="card-body">
+            <h4 class="card-title text-muted" style="font-weight:bold">{{firstname}}&nbsp;{{lastname}}</h4>
+            <div class="table-responsive">
+                <table class="table table-hover" style="margin:0 auto">
+                    <tr>
+                        <td>
+                            <span class="text-muted">Email:</span>
+                        </td>
+                        <td>{{email}}</td>
+                        <td>
+                            <i class="fa fa-pencil pull-right" style="cursor:pointer" (click)="ngxSmartModalService.getModal('email_change').open()"></i>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="text-muted">Mobile:</span>
+                        </td>
+                        <td>{{phone}}</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="text-muted">DOB:</span>
+                        </td>
+                        <td>{{dob.year}}/{{dob.month}}/{{dob.day}}</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="text-muted">Gender:</span>
+                        </td>
+                        <td> {{gender}}</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="text-muted">Country:</span>
+                        </td>
+                        <td>{{country}}</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="text-muted">State:</span>
+                        </td>
+                        <td>{{state}}</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="text-muted">City:</span>
+                        </td>
+                        <td>{{city}}</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="text-muted">Address:</span>
+                        </td>
+                        <td> {{address1}},{{address2}}</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="text-muted">Code:</span>
+                        </td>
+                        <td> {{code}}</td>
+                    </tr>
+                </table>
             </div>
         </div>
+        <footer class="footer">
+            <button class="btn btn-primary pull-right" (click)="ngxSmartModalService.getModal('undismissable').open()">
+                <i class="fa fa-pencil"></i> Edit</button>
+        </footer>
     </div>
 </div>
+
+<ngx-smart-modal #myModal [dismissable]="backDisable" [customClass]="'modal-lg'" identifier="undismissable">
+    <form [formGroup]="changeForm">
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="firstname">First Name</label>
+                <input type="email" formControlName="firstname2" value="{{firstname2}}" [(ngModel)]="firstname2" class="form-control" id="firstname"
+                    placeholder="Firstname">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="lastname">Last Name</label>
+                <input type="text" formControlName="lastname2" value="{{lastname2}}" [(ngModel)]="lastname2" class="form-control" id="lastname"
+                    placeholder="Lastname">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-12">
+                <label for="dob">Date of Birth</label>
+                <input class="form-control" formControlName="dob2" [(ngModel)]="dob2" value="{{dob2.year}}/{{dob2.month}}/{{dob2.day}}" (click)="d.toggle()"
+                    id="dob" placeholder="yyyy-mm-dd" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="phone">phone</label>
+            <input type="number" formControlName="phone2" [(ngModel)]="phone2" value="{{phone2}}" class="form-control" id="phone">
+        </div>
+        <div class="form-group">
+            <label for="inputAddress">Address</label>
+            <input type="text" formControlName="address12" [(ngModel)]="address12" value="{{address12}}" class="form-control" id="inputAddress"
+                placeholder="1234 Main St">
+        </div>
+        <div class="form-group">
+            <label for="inputAddress2">Address 2</label>
+            <input type="text" formControlName="address22" [(ngModel)]="address22" value="{{address22}}" class="form-control" id="inputAddress2"
+                placeholder="Apartment, studio, or floor">
+        </div>
+        <div class="form-group">
+            <label for="country">Country</label>
+            <input type="text" formControlName="country2" [(ngModel)]="country2" value="{{country2}}" class="form-control" id="country"
+                placeholder="India">
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="inputCity">City</label>
+                <input type="text" formControlName="city2" [(ngModel)]="city2" value="{{city2}}" class="form-control" id="inputCity">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputState">State</label>
+                <input type="text" formControlName="state2" [(ngModel)]="state2" value="{{state2}}" class="form-control" id="inputState">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputZip">Zip</label>
+                <input type="text" formControlName="zip2" [(ngModel)]="code2" value="{{code2}}" class="form-control" id="inputZip">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="form-label">
+                Image Upload
+            </label>
+            <div class="form-input">
+                <input type="file" name="photo" ng2FileSelect [uploader]="uploader" />
+                <button type="button" class="btn btn-success btn-s" (click)="uploader.uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
+                    Upload
+                </button>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary" (click)="Save_change()">Save</button>
+    </form>
+</ngx-smart-modal>
+
+<ngx-smart-modal #myModal2 [dismissable]="backDisable" [customClass]="'modal-lg'" identifier="email_change">
+    <form [formGroup]="emailChange">
+        <div class="form-group">
+            <label for="email2">New Email</label>
+            <input type="email" formControlName="email" [(ngModel)]="email2" class="form-control" id="email2">
+        </div>
+        <button type="submit" class="btn btn-primary" (click)="save_email()" [disabled]="!emailChange.valid" required>Save</button>
+    </form>
+</ngx-smart-modal>
